Add employee feature is finished.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Employee Payroll Tracker</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./Assets/CSS/style.css" />
 </head>
 
 <body>
@@ -16,10 +16,10 @@
     </header>
     <div class="card">
       <div class="card-header">
-       <h2>Employee Roster</h2>
+        <h2>Employee Roster</h2>
       </div>
       <div class="card-body">
-       <table>
+        <table>
         <thead>
           <tr>
             <th>First Name</th>
@@ -29,14 +29,14 @@
         </thead>
         <tbody id="employee-table">
         </tbody>
-       </table>
+        </table>
       </div>
       <div class="card-footer">
         <button id="add-employees-btn" class="btn">Add Employees</button>
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="./Assets/JS/script.js"></script>
 </body>
 
 </html>
